--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -57,6 +57,8 @@
     $margin:0px auto;
     $sectionMargin: 150px auto;
     $neutralMargin:0px auto;
+    $categoryMargin: 50px 0px 50px;
+    $containerMargin: 100px auto;
 
     // Border - Radius
 
