--- a/css/main.css
+++ b/css/main.css
@@ -780,11 +780,39 @@ html .contenedor .arrow {
 
 .containerTestimony {
   width: 85%;
-  margin: 0px auto;
+  margin: 100px auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.containerTestimony .headline {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  margin: 50px 0px 50px;
+}
+.containerTestimony .headline .subtitle {
+  color: white;
+  font-size: 1.87rem;
+  font-weight: 600;
+  text-align: center;
+}
+.containerTestimony .headline .paragraph {
+  font-size: 1rem;
+  text-align: left;
+  color: white;
+}
+.containerTestimony .headline .promotion {
+  font-size: 1rem;
+  text-align: left;
+  color: #EB5A00;
+  background-color: rgba(235, 90, 0, 0.2196078431);
+  font-weight: 600;
+  border-radius: 50px;
+  padding: 10px 10px;
 }
 .containerTestimony .subtitulo {
   color: #e3e3e3;
@@ -796,7 +824,7 @@ html .contenedor .arrow {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin: 0 auto 80px auto;
+  margin: 0px auto;
 }
 .containerTestimony .bundleOpinion .groupLine .cardOpinionShort {
   width: 32%;
