--- a/css/main.css
+++ b/css/main.css
@@ -365,7 +365,7 @@ html .contenedor .arrow {
 }
 
 .contenedorEmpleos {
-  width: 100vw;
+  width: 85%;
   max-width: 1100px;
   margin: 150px auto !important;
   display: flex;
@@ -524,8 +524,8 @@ html .contenedor .arrow {
 }
 
 .contenedorMatch {
-  width: 100%;
-  max-width: 1200px;
+  width: 85%;
+  max-width: 1100px;
   height: auto;
   margin: 150px auto;
   max-height: max-content;
@@ -700,7 +700,8 @@ html .contenedor .arrow {
 }
 
 .patrocinadores {
-  width: 80%;
+  width: 85%;
+  max-width: 1100px;
   margin: 150px auto;
   display: flex;
   flex-direction: column;
@@ -780,6 +781,7 @@ html .contenedor .arrow {
 
 .containerTestimony {
   width: 85%;
+  max-width: 1100px;
   margin: 100px auto;
   display: flex;
   flex-direction: column;
@@ -920,7 +922,8 @@ html .contenedor .arrow {
 }
 
 .accordion {
-  width: 80%;
+  width: 85%;
+  max-width: 1100px;
   height: auto;
   margin: 150px auto !important;
 }
@@ -979,6 +982,86 @@ html .contenedor .arrow {
   transition: all 0.3s ease-in-out;
 }
 .accordion .whatsApp:hover {
+  background-color: #232323;
+  border: 1px solid #232323;
+  color: #26A4E3;
+  box-shadow: 0 0 10px #26A4E3;
+  text-shadow: 0 0 10px #26A4E3;
+}
+
+.formContainer {
+  width: 85%;
+  max-width: 1100px;
+  height: auto;
+  margin: -50px auto 100px !important;
+  text-align: center;
+}
+.formContainer .subtitulo {
+  color: #e3e3e3;
+  font-size: 1.87rem;
+  font-weight: 600;
+  margin-bottom: 100px;
+}
+.formContainer .locationForm .mapa {
+  border-radius: 20px;
+  filter: drop-shadow(0 0 7px #a2a2a2);
+  opacity: 0.2;
+  transform: scale(100%);
+  transition: all 0.5s ease-in-out;
+}
+.formContainer .locationForm .mapa:hover {
+  border-radius: 30px;
+  filter: drop-shadow(0 0 3px #a2a2a2);
+  opacity: 0.4;
+  transform: scale(103%);
+}
+.formContainer .locationForm .form .formControl {
+  border-radius: 50px !important;
+}
+.formContainer .locationForm .form .form-floating {
+  font-size: 0.8rem;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+  background-color: #0f0f0f;
+  box-shadow: 0 0 10px 2px #090909;
+  border-radius: 50px !important;
+}
+.formContainer .locationForm .form .form-floating label {
+  display: block;
+  font-weight: 400;
+  font-size: 0.8rem;
+  border-radius: 50px !important;
+}
+.formContainer .locationForm .form textarea, .formContainer .locationForm .form input {
+  display: block;
+  width: 100%;
+  padding: 15px;
+  border-radius: 20px !important;
+  font-size: 0.8rem;
+  font-weight: 400;
+  border: 1px solid transparent;
+  background-color: #0f0f0f;
+  box-shadow: 0 0 10px 2px #090909;
+  color: #a2a2a2;
+}
+.formContainer .locationForm .form .btnAccion {
+  width: 46%;
+  display: inline;
+  cursor: pointer;
+  background-color: #26A4E3;
+  border: 1px solid #26A4E3;
+  border-radius: 50px !important;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  color: #e3e3e3;
+  margin: 0px 5px;
+  padding: 20px 35px;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  transition: all 0.3s ease-in-out;
+}
+.formContainer .locationForm .form .btnAccion:hover {
   background-color: #232323;
   border: 1px solid #232323;
   color: #26A4E3;
