--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -1,8 +1,8 @@
 // Services
 
 .contenedorEmpleos{
-    width: $screenWidth;
-    max-width: 1100px;
+    width: $containerWidth;
+    max-width: $maxWidth;
     margin: $sectionMargin !important;
     display: flex;
     flex-direction: column;
