--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -64,11 +64,11 @@
             text-decoration: none;
             transition: all 0.3s ease-in-out;
             &:hover{
-                background-color:#232323;
-                border:1px solid #232323;
-                color: #26A4E3;
-                box-shadow: 0 0 10px #26A4E3;
-                text-shadow: 0 0 10px #26A4E3;
+                background-color:$hoverColor;
+                border:1px solid $hoverColor;
+                color: $primaryColor;
+                box-shadow: 0 0 10px $primaryColor;
+                text-shadow: 0 0 10px $primaryColor;
             }
         }
     }
@@ -93,3 +93,147 @@
         }
     }
 }
+.buscadorServices{
+    width: 50%;
+    margin: $sectionMargin !important;
+    p{
+        font-size: $regularText;
+        text-align: left;
+        color: $whiteColor;
+    }
+    input{
+        width:100%;
+        font-size: $smallTitle;
+        border-radius: $ctoBorderRadius !important;
+        border: 1px solid  $shadowColor;
+        box-shadow: 0 0 10px 2px  $shadowColor;
+        background-color: $backgroundColor;
+        color: $tertiaryColor;
+        font-family:  $mainFont;
+        padding: $paddingCto;
+    }
+}
+.cards{
+    width: $containerWidth;
+    max-width: $maxWidth;
+    margin: $sectionMargin;
+    .subtitle{
+        color:  $whiteColor;
+        font-size: $LargeTitle;
+        font-weight: $bold;
+        font-family: $mainFont;
+        margin-bottom: 100px;
+    }
+    .contenedorDevelopers{
+        .cardDev{
+            background-color:  $backgroundColor;
+            border-radius: 5px;
+            cursor:pointer;
+            margin: 3px 3px;
+            flex-wrap: wrap;
+            border: 1px solid  $backgroundColor;
+            transform: scale(100%);
+            box-shadow: 0 0 10px 2px $shadowColor;
+            transition: transform .3s;
+            &:hover{
+                background-color: $orangeBackgroundColor;
+                box-shadow: 0 0 10px  $secondaryColor;
+                transform: scale(98%);
+                border: 1px solid transparent;
+                text-shadow: 0 0 10px  $secondaryColor;
+            }
+            .card{
+                width: 55px;
+                border:1px solid transparent;
+                object-fit: contain;
+            }
+            h3{
+                color: $tertiaryColor;
+                font-size: $regularText;
+                font-family:  $mainFont;
+            }
+        }
+    }
+    .anuncio{
+        color: $tertiaryColor;
+        font-size: $regularText;
+        margin: 40px auto;
+    }
+    .contactanosDesarrolladores{
+        width: 20%;
+        font-size: $regularText;
+        text-align: center;
+        color: $whiteColor;
+        background-color: $secondaryColor;
+        border:1px solid $secondaryColor;
+        border-radius:  $ctoBorderRadius;
+        cursor: pointer;
+        padding: $paddingCto;
+        margin: 0px auto 100px;
+        text-decoration: none;
+        font-family: $mainFont;
+        font-weight: $bold;
+        transition: all 0.3s ease-in-out;
+        &:hover{
+            background-color:$hoverColor;
+            border:1px solid $hoverColor;
+            color: $secondaryColor;
+            box-shadow: 0 0 10px  $secondaryColor;
+            text-shadow: 0 0 10px  $secondaryColor;
+        }
+    }
+    .contenedorDesigners{
+        .cardDesigners{
+            background-color: $backgroundColor;
+            border-radius: 5px;
+            cursor:pointer;
+            margin: 3px 3px;
+            flex-wrap: wrap;
+            border: 1px solid $backgroundColor;
+            transform: scale(100%);
+            box-shadow: 0 0 10px 2px $shadowColor;
+            transition: transform .3s;
+            &:hover{
+                background-color: $blueBackgroundColor;
+                border:1px solid transparent;
+                transform: scale(98%);
+                box-shadow: 0 0 10px $primaryColor;
+                text-shadow: 0 0 10px $primaryColor;
+            }
+            .card{
+                width: 55px;
+                border:1px solid transparent;
+                object-fit: contain;
+            }
+            h3{
+                color: $tertiaryColor;
+                font-size:$regularText;
+                font-family: $mainFont;
+            }
+        }
+    }
+    .contactanosDiseñadores{
+        width: 20%;
+        font-size: $regularText;
+        text-align: center;
+        color: $whiteColor;
+        background-color: $primaryColor;
+        border:1px solid $primaryColor;
+        border-radius: $ctoBorderRadius;
+        cursor: pointer;
+        padding:  $paddingCto;
+        margin: 0px auto 100px;
+        text-decoration: none;
+        font-family: $mainFont;
+        font-weight: $bold;
+        transition: all 0.3s ease-in-out;
+        &:hover{
+            background-color:$hoverColor;
+            border:1px solid $hoverColor;
+            color: $primaryColor;
+            box-shadow: 0 0 10px $primaryColor;
+            text-shadow: 0 0 10px $primaryColor;
+        }
+    }
+}
+
