--- a/css/main.css
+++ b/css/main.css
@@ -1665,4 +1665,140 @@ html .contenedor .arrow {
   box-shadow: 0 0 10px #3a3a3a;
 }
 
+@media (max-width: 850px) {
+  .header {
+    width: 100vw;
+    height: 65px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 80px;
+  }
+  .header .menu {
+    width: 50vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    background-color: #0c0c0c;
+    box-shadow: 0 0 5px #090909;
+    transform: translateX(100%);
+    transition: transform 0.3s;
+  }
+  .header #menu:checked ~ .menu {
+    transform: translate(0%);
+    z-index: 10;
+  }
+  .header .menu ul {
+    width: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+  }
+  .header .menu ul li {
+    width: inherit;
+    padding: 0px 0px 0px 50px;
+  }
+  .header .menu ul li .categoria {
+    width: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px auto;
+    cursor: pointer;
+    text-decoration: none;
+    color: #ffffff;
+    padding: 20px 350px 20px 40px !important;
+    margin-left: -83px !important;
+    border-bottom: 1px solid transparent;
+    transition: all 0.5s ease;
+  }
+  .header .menu ul li:hover .categoria {
+    background-color: #0f0f0f;
+  }
+  .header .menu ul li .categoria .item {
+    width: 24px;
+    margin-right: 20px;
+    display: flex;
+    transition: all 0.5s ease;
+  }
+  .header .menu .socialMedia {
+    display: flex;
+    justify-content: center;
+  }
+  .header .menu .socialMedia .iconLink {
+    width: 20px;
+    transform: scale(100%);
+    transition: transform 0.3s ease-in-out;
+    margin: 0 3px;
+  }
+  .header .menu .socialMedia .iconLink:hover {
+    filter: drop-shadow(0 0 10px #3a3a3a);
+    transform: scale(112%);
+  }
+  .header .drawer {
+    display: block;
+    width: 32px;
+    cursor: pointer;
+    transform: scale(100%) rotate(0deg);
+    transition: all 0.3s;
+  }
+  .header .drawer:hover {
+    transform: scale(105%) rotate(270deg);
+  }
+  .header .close {
+    width: 32px;
+    display: block;
+    position: absolute;
+    top: 30px;
+    left: 40px;
+    cursor: pointer;
+    transform: scale(100%) rotate(0deg);
+    transition: all 0.3s;
+  }
+  .header .close:hover {
+    transform: scale(105%) rotate(270deg);
+  }
+}
+@media (max-width: 767px) {
+  .header {
+    padding: 0px 40px;
+  }
+  .header .menu {
+    width: 55vw;
+    height: 100%;
+  }
+  .header .menu ul {
+    display: flex;
+  }
+  .header .menu ul li .categoria {
+    padding: 25px auto !important;
+    border-radius: 0px !important;
+    transition: all 0.5s ease;
+  }
+  .header .menu ul li:hover .categoria {
+    background-color: #0f0f0f;
+  }
+  .header .menu .socialMedia {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media (max-width: 490px) {
+  .header .menu {
+    width: 100%;
+    height: 100%;
+  }
+  .header .menu ul li .categoria {
+    font-size: 0.8rem !important;
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
